--- a/app-config.yaml
+++ b/app-config.yaml
@@ -1,9 +1,9 @@
 app:
-  title: Scaffolded Backstage App
+  title: JulianSC Backstage App
   baseUrl: http://localhost:3000
 
 organization:
-  name: My Company
+  name: JulianSC
 
 backend:
   # Used for enabling authentication, secret is shared by all backend plugins
