Add documentation example template

--- a/app-config.yaml
+++ b/app-config.yaml
@@ -71,3 +71,8 @@ scaffolder:
 catalog:
   rules:
     - allow: [Component, System, API, Resource, Location]
+  locations:
+    - type: file
+      target: ../../examples/doc-template/template.yaml
+      rules:
+        - allow: [Template]
